--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title></title>
-    <meta name="description" content="">
+    <meta name="description" content="Boris Nanik Visual Designer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="favicon" href="./assets/img/fav.jpg" type="image/jpeg">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
@@ -22,7 +23,9 @@
         <![endif]-->
     <div class="container-fluid landing">
             <img class="img img-responsive landing__img" src="./assets/img/img.jpg" alt="picture">
-            <button class="landing__button">Hello</button>
+            <a href="mailto:nanik.boris@gmail.com">
+                <button class="landing__button">hello.</button>
+            </a>
     </div>
 </body>
 
