--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title></title>
     <meta name="description" content="Boris Nanik Visual Designer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="favicon" href="./assets/img/fav.jpg" type="image/jpeg">
+    <link rel="icon" href="./assets/img/fav.jpg" type="image/jpeg">
     <link rel="stylesheet" href="./assets/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
